--- a/src/styles/Skills.scss
+++ b/src/styles/Skills.scss
@@ -26,3 +26,20 @@
     font-size: 1.3em;
     border-radius: 18px;
 }
+.selectedskills{
+    //background-color: bisque;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -35%);
+    z-index: 10;
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+    p{
+        font-size: 1.5em;
+        color: whitesmoke;
+    }
+}
