--- a/src/styles/Profile.scss
+++ b/src/styles/Profile.scss
@@ -1,12 +1,10 @@
 #Profile{
     position: relative;
+    width: 40vw;
+    margin: auto;
     form{
-        width: 400px;
-        height: 250px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100vh;
         background-color: rgb(214, 212, 212);
         padding: 10px;
         display: flex;
