--- a/src/styles/Skills.scss
+++ b/src/styles/Skills.scss
@@ -4,3 +4,13 @@
         background-color: blue;
     }
 }
+.datatable-templating-demo .table-header {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.datatable-templating-demo .product-image {
+    width: 100px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
